- Internal cleanup  & error reporting improvements

1.4_03

- certificateTemplate ASN correction: MajorVersion is optional
- certificateTemplate returns id as a name if OID registered (API V1)
- handle some malformed requests better
- decode more M$ attributes, correct some.
- Don't croak() on missing attributes
- Convert BMPStrings from UCS2 to Perl (printable) strings
- Rework special OID handling to be scalable & cover attributes
- Don't croak in new.  (API V1) Always return undef.  Class method error() returns detail.
- Return reasonable strings from attributes('name') and extensionValue('name',1)
- Overload object so print can produce a useful dump.
- Handle null subject
- More enhanced key usage OIDs
- keyUsage returns array rather than comma separated string (API v1)
- Cleaned up POD
- Do a better job with error reporting
- Validate PEM's Base64 encoding.
- Ensure that only the first PEM certificate is extracted.
- Improve tests
- Enable (internal) custom formatters for extensions and attributes.
- Return basicConstraints as a hash
- Accept numeric OIDs as arguments to extensionValue, extensionPresent and attributes.

1.4_04
 - Build Kwalitee issues: Minimum Perl version, Repo location, and Provides in META
 - Fix test issues due to hash randomization on newer Perl versions.

1.4_05
 - Sign distribution kits
 - Remove execute permissions from text files
 - Generate Markdown format README for github
 - Use Pod::Weaver to manage authorship, copyright from dist.ini
 - Add prerequisites display test
 - Validate with perlcritic, pod syntax

1.5
 - Uncoordinated release of 1.4_04

1.6
 - Support some EC OIDs

1.6_01
 - ECC test doesn't require Data::Dumper
 - Support more EC OIDs
 - Add DSA OIDs
 - Add subjectPublicKeyParams(), which provides some description of the key
 - Add certificationRequest and signature(1) to enable verification of CSR signatures
 - Add signatureParams()
 - Add signature(2) to extract ECDSA signature components.

__END__