@@ -27,8 +27,7 @@ DESCRIPTION
 
     Common object identifiers will be translated to their corresponding
     names. Additionally, accessor methods allow extraction of single data
-    fields. Bit Strings like signatures will be returned in their
-    hexadecimal representation.
+    fields. The format of returned data varies by accessor.
 
     The access methods return the value corresponding to their name. If
     called in scalar context, they return the first value (or an empty
@@ -42,7 +41,7 @@ NAME
 
 RELEASE NOTES
 
-    Version 1.4 has several API changes. Most users should have a painless
+    Version 1.4 made several API changes. Most users should have a painless
     migration.
 
     ALL users must call Crypt::PKCS10->setAPIversion. If not, a warning
@@ -61,6 +60,9 @@ RELEASE NOTES
     to use, and does not require the application to navigate internal data
     structures.
 
+    Version 1.7 provides support for DSA and ECC public keys. It also
+    allows the caller to verify the signature of a CSR.
+
 INSTALLATION
 
     To install this module type the following:
@@ -73,6 +75,10 @@ INSTALLATION
 REQUIRES
 
     Convert::ASN1
+
+    Tests also require Crypt::OpenSSL::DSA, Crypt::OpenSSL::RSA,
+    Crypt::PK::ECC, Digest::SHA. Note that these are useful for signature
+    verification; see the tests for code.
 
 METHODS
 
@@ -440,6 +446,12 @@ METHODS
     E.g. built-in are $oid => '2.4.5.3', $longname => 'commonName',
     $shortname => 'CN'
 
+    To register a shortname for an existing OID without one, specify
+    $longname as undef.
+
+    E.g. To register /E for emailAddress, use: Crypt::PKCS10->registerOID(
+    '1.2.840.113549.1.9.1', undef, 'e' )
+
     Generates an exception if any argument is not valid, or is in use.
 
     Returns true otherwise.
@@ -655,6 +667,8 @@ CHANGES
     
        - Add signature(2) to extract ECDSA signature components.
     
+       - Fix and extend registerOID, add tests.
+    
       
 
     For a more detailed list of changes, see Commitlog in the distribution.
@@ -677,7 +691,7 @@ EXAMPLES
 
 ACKNOWLEDGEMENTS
 
-    Martin Bartosch contributed the OIDs and tests for EC support.
+    Martin Bartosch contributed preliminary EC support: OIDs and tests.
 
     Timothe Litt made most of the changes for V1.4+
 
