@@ -336,6 +336,7 @@ sub _oid2name {
 # registerOID( $oid ) => true if $oid is registered, false if not
 # registerOID( $oid, $longname ) => Register an OID with its name
 # registerOID( $oid, $longname, $shortname ) => Register an OID with an abbreviation for RDNs.
+# registerOID( $oid, undef, $shortname ) => Register an abbreviation for RDNs for an existing OID
 
 sub registerOID {
     my( $class, $oid, $longname, $shortname ) = @_;
@@ -347,14 +348,24 @@ sub registerOID {
 
     return exists $oids{$oid} || exists $oid2extkeyusage{$oid} if( @_ == 2 && defined $oid );
 
-    croak( "Not enough arguments" )          unless( @_ >= 3 && defined $oid && defined $longname );
-    croak( "Invalid oid $oid" )              unless( defined $oid && $oid =~ /^\d+(?:\.\d+)*$/ );
-    croak( "$oid already registered" )       if( exists $oids{$oid} || exists $oid2extkeyusage{$oid} );
-    croak( "$longname already registered" )  if( grep /^$longname$/, values %oids );
+    croak( "Not enough arguments" )          unless( @_ >= 3 && defined $oid && ( defined $longname || defined $shortname ) );
+    croak( "Invalid OID $oid" )              unless( defined $oid && $oid =~ /^\d+(?:\.\d+)*$/ );
+
+    if( defined $longname ) {
+        croak( "$oid already registered" )       if( exists $oids{$oid} || exists $oid2extkeyusage{$oid} );
+        croak( "$longname already registered" )  if( grep /^$longname$/, values %oids );
+    } else {
+        croak( "$oid not registered" ) unless( exists $oids{$oid} || exists $oid2extkeyusage{$oid} );
+    }
     croak( "$shortname already registered" ) if( defined $shortname && grep /^\U$shortname\E$/,
 						                            values %shortnames );
 
-    $oids{$oid} = $longname;
+    if( defined $longname ) {
+        $oids{$oid} = $longname;
+        $name2oid{$longname} = $oid;
+    } else {
+        $longname = $class->_oid2name( $oid );
+    }
     $shortnames{$longname} = uc $shortname   if( defined $shortname );
     return 1;
 }
@@ -1186,12 +1197,16 @@ sub signature {
     my $self = shift;
     my $format = shift;
 
-    if( defined $format && $format == 2 ) { # ECDSA
-        my $par = $self->_init( 'ecdsaSigValue' );
-        return $par->decode( $self->{signature}[0] );
+    if( defined $format && $format == 2 ) { # Per keytype decoding
+        if( $self->pkAlgorithm eq 'ecPublicKey' ) { # ECDSA
+            my $par = $self->_init( 'ecdsaSigValue' );
+            return $par->decode( $self->{signature}[0] );
+        }
+        return;                             # Unknown
     }
     return $self->{signature}[0] if( $format );
-    unpack('H*', $self->{signature}[0]);
+
+    return unpack('H*', $self->{signature}[0]);
 }
 
 sub certificationRequest {
@@ -1480,7 +1495,7 @@ Crypt::PKCS10 - parse PKCS #10 certificate requests
 
 =head1 RELEASE NOTES
 
-Version 1.4 has several API changes.  Most users should have a painless migration.
+Version 1.4 made several API changes.  Most users should have a painless migration.
 
 ALL users must call Crypt::PKCS10->setAPIversion.  If not, a warning will be generated
 by the first class method called.  This warning will be made a fatal exception in a
@@ -1496,6 +1511,9 @@ new will accept an open file handle in addition to a request.
 Users are encouraged to migrate to the version 1 API.  It is much easier to use,
 and does not require the application to navigate internal data structures.
 
+Version 1.7 provides support for DSA and ECC public keys.  It also allows the
+caller to verify the signature of a CSR.
+
 =head1 INSTALLATION
 
 To install this module type the following:
@@ -1507,7 +1525,10 @@ To install this module type the following:
 
 =head1 REQUIRES
 
-Convert::ASN1
+C<Convert::ASN1>
+
+Tests also require C<Crypt::OpenSSL::DSA, Crypt::OpenSSL::RSA, Crypt::PK::ECC, Digest::SHA>.
+Note that these are useful for signature verification; see the tests for code.
 
 =end :readme
 
@@ -1531,7 +1552,7 @@ C<Crypt::PKCS10> parses PKCS #10 certificate requests (CSRs) and provides access
 
 Common object identifiers will be translated to their corresponding names.
 Additionally, accessor methods allow extraction of single data fields.
-Bit Strings like signatures will be returned in their hexadecimal representation.
+The format of returned data varies by accessor.
 
 The access methods return the value corresponding to their name.  If called in scalar context, they return the first value (or an empty string).  If called in array context, they return all values.
 
@@ -1907,6 +1928,11 @@ The short name should be upper-case (and will be upcased).
 
 E.g. built-in are C<< $oid => '2.4.5.3', $longname => 'commonName', $shortname => 'CN' >>
 
+To register a shortname for an existing OID without one, specify C<$longname> as C<undef>.
+
+E.g. To register /E for emailAddress, use:
+  C<< Crypt::PKCS10->registerOID( '1.2.840.113549.1.9.1', undef, 'e' ) >>
+
 
 Generates an exception if any argument is not valid, or is in use.
 
@@ -2111,7 +2137,7 @@ realistic certificate requests.
 
 =head1 ACKNOWLEDGEMENTS
 
-Martin Bartosch contributed the OIDs and tests for EC support.
+Martin Bartosch contributed preliminary EC support:  OIDs and tests.
 
 Timothe Litt made most of the changes for V1.4+
 
